--- a/scss/man.scss
+++ b/scss/man.scss
@@ -43,7 +43,6 @@ h3 {
   &.sm-heading {
     margin-bottom: 2rem;
     padding: 0.2rem 1rem;
-    background: rgba(lighten($primary-color, 2), 0.5);
   }
 }
 a {
@@ -65,6 +64,8 @@ main {
   padding: 4rem;
   height: 100%;
   min-height: calc(100vh - 60px);
+  text-align: left;
+
   .icons {
     margin-top: 1rem;
 
@@ -82,7 +83,20 @@ main {
     overflow: hidden;
     h1 {
       margin-top: 20vh;
+      text-align: left;
+      margin-left: 0;
     }
+  }
+}
+
+.messenger-container {
+  margin: 0;
+  padding: 0;
+  text-align: left;
+
+  #messenger {
+    margin: 0;
+    padding: 0;
   }
   &#about {
     overflow: auto;
