--- a/scss/man.scss
+++ b/scss/man.scss
@@ -93,10 +93,12 @@ main {
   margin: 0;
   padding: 0;
   text-align: left;
+  min-height: 2rem;
 
   #messenger {
     margin: 0;
     padding: 0;
+    min-height: 1.5rem;
   }
   &#about {
     overflow: auto;
