--- a/src/styles/man.scss
+++ b/src/styles/man.scss
@@ -85,7 +85,6 @@ main {
     overflow: hidden;
 
     h1 {
-      margin-top: 20vh;
       margin-bottom: 1rem;
       text-align: left;
       font-size: 1.0rem;
@@ -141,7 +140,7 @@ main {
 
     a {
       padding: 0;
-      color: #0a0;
+      color: #666;
       transition: color 0.3s ease;
 
       &:hover {
@@ -175,6 +174,12 @@ main {
         width: 60px;
         height: 60px;
         object-fit: contain;
+      }
+
+      // Make architect cert span width of 3 certs above
+      img[alt*="Architecture"] {
+        width: calc(180px + 2rem);
+        height: auto;
       }
     }
   }
